// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: StatusBadge prints error if type is not provided 1`] = `null`;

exports[`Utilities: StatusBadge renders deprecated status badge when type is 'deprecated' 1`] = `
<span
  className="status-badge status-badge-deprecated"
>
  <i
    aria-hidden="true"
    className="at-trash small mr-2"
  />
  Deprecated
</span>
`;

exports[`Utilities: StatusBadge renders javascript status badge when type is 'javascript' 1`] = `
<span
  className="status-badge status-badge-javascript"
>
  <i
    aria-hidden="true"
    className="javascript-icon"
  />
  Uses JavaScript
</span>
`;

exports[`Utilities: StatusBadge renders new status badge when type is 'new' 1`] = `
<span
  className="status-badge status-badge-new"
>
  <i
    aria-hidden="true"
    className="at-hand-holding-seedling small mr-2"
  />
  New
</span>
`;

exports[`Utilities: StatusBadge renders remove status badge when type is 'remove' 1`] = `
<span
  className="status-badge status-badge-remove"
>
  <i
    aria-hidden="true"
    className="at-axe"
  />
  Being removed
</span>
`;

exports[`Utilities: StatusBadge renders updated status badge when type is 'updated' 1`] = `
<span
  className="status-badge status-badge-updated"
>
  <i
    aria-hidden="true"
    className="at-click-select small mr-2"
  />
  Newly updated
</span>
`;
